:toc2:
:icons: font
:toclevels: 3
:numbered:
:sectanchors:
:stem: asciimath

:imagesdir: images

//Title
= Ansible Automation Platform Controller release notes

Release details for Ansible Automation Platform Controller.

//User stories
include::stories.adoc[]