@@ -8,6 +8,8 @@
 
 :imagesdir: images
 
+include::../xrefs/controller-xrefs.adoc[]
+
 //Title
 = Controller upgrade and migration
 
