@@ -1,0 +1,75 @@
+//Attributes with guide urls (admin_guide, user_guide, etc) are in GitLab
+//Guide urls are sourced in the title-links.adoc file
+include::title-links.adoc[]
+
+//Administration guide xrefs
+:ag_auth_ldap: link:{admin_guide}#ag_backup_restore[LDAP authentication]
+:ag_auth_saml: link:{admin_guide}#ag_auth_saml[SAML authentication]
+:ag_backup_restore: link:{admin_guide}#ag_backup_restore[Backup and restore]
+:ag_clustering: link:{admin_guide}#ag_clustering[Clustering]
+:ag_configure_tower: link:{admin_guide}#ag_configure_tower[Configuration]
+:ag_container_groups: link:{admin_guide}#ag_container_groups[Container groups]
+:ag_ent_auth: link:{admin_guide}#ag_ent_auth[Setting up enterprise authentication]
+:ag_ext_exe_env: link:{admin_guide}#ag_ext_exe_env[Container and instance groups]
+:ag_instance_groups: link:{admin_guide}#ag_instance_groups[Instance groups]
+:ag_inv_import: link:{admin_guide}#ag_inv_import[Inventory file importing]
+:ag_logging: link:{admin_guide}#ag_logging[Controller logging and aggregation]
+:ag_manage_utility_revoke_tokens: link:{admin_guide}#ag_manage_utility_revoke_tokens[Revoking tokens]
+:ag_multi_vault: link:{admin_guide}#ag_multi_vault[Multi-vault credentials]
+:ag_oauth2_token_auth: link:{admin_guide}#ag_oauth2_token_auth[OAuth2 token authentication]
+:ag_oauth2_token_revoke: link:{admin_guide}#ag_oauth2_token_revoke[Revoking OAuth2 tokens]
+:ag_session_limits: link:{admin_guide}#ag_session_limits[Session Limits]
+:ag_start: link:{admin_guide}#ag_start[Administration Guide]
+:ag_social_auth: link:{admin_guide}#ag_social_auth[OAuth providers]
+:ag_topology_viewer: link:{admin_guide}#ag_topology_viewer[Topology Viewer]
+:ag_use_oauth_pat: link:{admin_guide}#ag_use_oauth_pat[Using OAuth 2 token system for personal access tokens (PAT)]
+:launch_jobs_curl: link:{admin_guide}#launch_jobs_curl[Launching jobs with curl]
+:usability_data_collection: link:{admin_guide}#usability_data_collection[Usability analytics and data collection]
+:user_data_insights: link:{admin_guide}#user_data_insights[Automation analytics]
+
+//Upgrade guide xrefs
+:migrate_iso_to_exe: link:{upgrade_guide}#migrate_iso_to_exe[Migrate isolated instances to execution nodes]
+:migrate_new_venv: link:{upgrade_guide}#migrate_new_venv[Migrate legacy venvs to execution environments]
+:mesh_topology_ee: link:{upgrade_guide}#mesh_topology_ee[View mesh topology]
+:upgrade_venv: link:{upgrade_guide}#upgrade_venv[Upgrading to Execution Environments]
+
+//User guide xrefs
+:ug_activitystreams: link:{user_guide}#ug_activitystreams[Activity streams]
+:ug_add_inv_common_fields: link:{user_guide}#ug_add_inv_common_fields[Adding a source]
+:ug_applications_auth: link:{user_guide}#ug_applications_auth[Application authentication]
+:ug_build_ees: link:{user_guide}#ug_build_ees[Building Execution Environments]
+:ug_content_signing: link:{user_guide}#ug_content_signing[Content signing]
+:ug_credentials_add: link:{user_guide}#ug_credentials_add[Adding credentials]
+:ug_credential_plugins: link:{user_guide}#ug_credential_plugins[Secret management system]
+:ug_credential_types: link:{user_guide}#ug_credential_types[Credential types]
+:ug_customscripts: link:{user_guide}#customscripts[Custom scripts]
+:ug_credentials_ocp_k8s: link:{user_guide}#ug_credentials_ocp_k8s[OpenShift credentials]
+:ug_execution_environments: link:{user_guide}#ug_execution_environments[Execution Environments]
+:ug_galaxy: link:{user_guide}#ug_galaxy[Galaxy]
+:ug_instance_groups: link:{user_guide}#ug_instance_groups[Instance groups]
+:ug_inventories: link:{user_guide}#ug_inventories[Inventories]
+:ug_inventories_add: link:{user_guide}#ug_inventories_add[Adding inventories]
+:ug_inventory_sources: link:{user_guide}#ug_inventory_sources[Inventory sources]
+:ug_jobs: link:{user_guide}#ug_jobs[Jobs]
+:ug_job_branching: link:{user_guide}#ug_job_branching[Job branch overriding]
+:ug_users: link:{user_guide}#ug_user[Users]
+:ug_users_create: link:{user_guide}#ug_users_create[Creating users]
+:ug_users_tokens: link:{user_guide}#ug_users_tokens[User tokens]
+:ug_team_create: link:{user_guide}#ug_team_create[Creating Teams]
+:ug_ldap_auth_perf_tips: link:{user_guide}#ug_ldap_auth_perf_tips[LDAP authentication performance]
+:ug_manual: link:{user_guide}#ug_manual[Manage playbooks manually]
+:ug_notifications: link:{user_guide}#ug_notifications[Notifications]
+:ug_notifications_on_off: link:{user_guide}#ug_notifications_on_off[Turning notifications on and off]
+:ug_notifications_types: link:{user_guide}#ug_notifications_types[Notification types]
+:ug_notifications_create: link:{user_guide}#ug_notifications_create[Creating notifications]
+:ug_projects_scm_types: link:{user_guide}#ug_projects_scm_types[Manage playbooks using source control]
+:ug_scheduling: link:{user_guide}#ug_scheduling[Scheduling]
+:ug_webhooks: link:{user_guide}#ug_webhooks[Webhooks]
+:import_subscription: link:{user_guide}#import_subscription[Import a subscription]
+:rbac-ug: link:{user_guide}#rbac-ug[Role-based access control]
+:ref_ee_definition: link:{user_guide}#ref_ee_definition[Execution environment definition]
+:ref_collections_metadata: link:{user_guide}#ref_collections_metadata[Collection-level metadata]
+
+//Link to example yaml for container group service account
+//Administration Guide, create a container group
+:containergroup-sa-file: link:https://raw.githubusercontent.com/ansible/aap-docs/main/sync/controller-docs/common/source/containergroup-sa.yml[containergroup-sa.yml]
