@@ -1,0 +1,9 @@
+//Base urls for controller docs
+//This file is included in controller-xrefs.adoc
+
+:admin_guide: https://htmlpreview.github.io/?https://github.com/ansible/aap-docs/blob/aap-2.3/titles/controller/administration/administration.html
+:controllerapi_guide: https://htmlpreview.github.io/?https://github.com/ansible/aap-docs/blob/aap-2.3/titles/controller/controllerapi/controllerapi.html
+:quickstart_guide: https://htmlpreview.github.io/?https://github.com/ansible/aap-docs/blob/aap-2.3/titles/controller/quickstart/quickstart.html
+:release_notes: https://htmlpreview.github.io/?https://github.com/ansible/aap-docs/blob/aap-2.3/titles/controller/release-notes/release-notes.html
+:upgrade_guide: https://htmlpreview.github.io/?https://github.com/ansible/aap-docs/blob/aap-2.3/titles/controller/upgrade-migration-guide/upgrade-migration-guide.html
+:user_guide: https://htmlpreview.github.io/?https://github.com/ansible/aap-docs/blob/aap-2.3/titles/controller/userguide/userguide.html
