@@ -7,6 +7,8 @@
 
 :imagesdir: images
 
+include::../xrefs/controller-xrefs.adoc[]
+
 //Title
 = Ansible Automation Platform Controller release notes
 
